--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,22 @@
         tools:context=".MainActivity">
 
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sum of Square"
+            android:layout_width="314dp"
+            android:layout_height="80dp"
+            android:text="標本a"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" android:id="@+id/a" android:textSize="30sp"/>
+    <TextView
+            android:text="標本b"
+            android:layout_width="313dp"
+            android:layout_height="80dp" android:id="@+id/b"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/a"
+            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.121"
+            android:textSize="30sp"/>
 
 </android.support.constraint.ConstraintLayout>
