--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sum of Square"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
+            android:text="TextView"
+            android:layout_width="217dp"
+            android:layout_height="72dp"
+            android:id="@+id/text1"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="130dp" android:layout_marginStart="130dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="222dp"
+            android:layout_marginRight="222dp" app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.475"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="230dp"
+            android:layout_height="71dp"
+            android:id="@+id/text2" app:layout_constraintStart_toStartOf="@+id/text1"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text1"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.227" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 </android.support.constraint.ConstraintLayout>
