--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,19 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sum of Square"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" android:id="@+id/resultA"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/resultB" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="176dp"
+            android:layout_marginStart="176dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="176dp" android:layout_marginRight="176dp" android:layout_marginTop="414dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="298dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 
 </android.support.constraint.ConstraintLayout>
