--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,19 @@
 
     <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:text="Sum of Square"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:id="@+id/TextView" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="200dp"
+            android:layout_marginEnd="150dp" android:layout_marginRight="150dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="150dp" android:layout_marginStart="150dp" android:textSize="30sp"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@+id/TextView"
+            app:layout_constraintEnd_toEndOf="@+id/TextView" android:id="@+id/TextView2"
+            android:layout_marginTop="80dp" app:layout_constraintTop_toBottomOf="@+id/TextView"
+            android:textSize="30sp"/>
 
 </android.support.constraint.ConstraintLayout>
