--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,33 @@
         tools:context=".MainActivity">
 
     <TextView
-            android:layout_width="314dp"
-            android:layout_height="80dp"
-            android:text="標本a"
+            android:layout_width="307dp"
+            android:layout_height="109dp"
+            android:text="標本a or 標本b"
             android:textColor="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:id="@+id/a" android:textSize="30sp"/>
+            app:layout_constraintTop_toTopOf="parent" android:id="@+id/a" android:textSize="24sp"
+            android:gravity="center_horizontal"/>
+    <Button
+            android:text="標本a"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button_a" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/button_b"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/a" app:layout_constraintHorizontal_bias="0.271"
+            app:layout_constraintVertical_bias="0.625" android:textSize="24sp"/>
+    <Button
+            android:text="標本b"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button_b" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/a" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="64dp" android:layout_marginRight="64dp"
+            app:layout_constraintVertical_bias="0.622" android:textSize="24sp"/>
 
 </android.support.constraint.ConstraintLayout>
