--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,18 +11,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:id="@+id/resultA"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+            android:id="@+id/resultA"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="205dp"
+            android:layout_marginStart="205dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="205dp" android:layout_marginEnd="205dp"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/resultB" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="176dp"
-            android:layout_marginStart="176dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="176dp" android:layout_marginRight="176dp" android:layout_marginTop="414dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="298dp"
+            android:id="@+id/resultB"
+            android:layout_marginBottom="200dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:layout_marginTop="400dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/resultA"
+    />
 
 </android.support.constraint.ConstraintLayout>
