--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,18 @@
         tools:context=".MainActivity">
 
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sum of Square"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="240dp"
+            android:layout_height="80dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" android:id="@+id/answerA" android:layout_marginTop="104dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.324"/>
+    <TextView
+            android:layout_width="240dp"
+            android:layout_height="80dp"
+            android:id="@+id/answerB" android:layout_marginTop="28dp"
+            app:layout_constraintTop_toBottomOf="@+id/answerA" app:layout_constraintStart_toStartOf="@+id/answerA"
+    />
 
 </android.support.constraint.ConstraintLayout>
